--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "node": ">=0.6.15"
   },
   "devDependencies": {
-    "express": "~2.5.4"
+    "express": "~2.5.4",
+	"xcas": "~0.1.0"
   },
   "optionalDependencies": {
     "oauth": ">=0.9.6"
