--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "contributors": [
     "Mark Lussier <mlussier@gmail.com> (https://github.com/intabulas)"
   ],
+  "private": "true",
   "main": "./lib/authom",
   "repository": {
     "type": "git",
