--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "url": "https://github.com/Omneedia/authom/issues"
   },
   "dependencies": {
-    
+    "xcas": "0.1.0"
   },
-  "_id": "authom@1.0.0",
+  "_id": "authom@1.0.1",
   "dist": {
   },
   "_resolved": "git+https://git@github.com/Omneedia/authom.git",
